More work on fixing up the quick fixes.